[web-gui][task-point] fix overflow

--- a/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.scss
+++ b/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.scss
@@ -147,3 +147,8 @@
 .selected:hover {
   background-color: #bad1dd;
 }
+
+.card > span {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
